--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,7 +5,7 @@
     <title>BAN - Bicing Notifier</title>
     <link rel="stylesheet" href="style.css">
     <script>
-        const BASE_URL = "http://localhost:8080/city-tool";
+        const BASE_URL = "http://localhost:8080/citytool";
 
         function getStations() {
             var xmlhttp = new XMLHttpRequest();
