Front end update

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -22,11 +22,11 @@
                 <form id="subscribeForm">
                     <div class="field">
                         <label for="phone">Phone Number</label>
-                        <input type="number" id="phone" placeholder="e.g., 600123456" required>
+                        <input type="text" id="phone" placeholder="e.g., 600123456" pattern="[0-9]{9}" required>
                     </div>
                     <div class="field">
                         <label for="stationsIds">Station IDs (comma-separated)</label>
-                        <input type="text" id="stationsIds" placeholder="e.g., 1, 5, 12" required>
+                        <input type="text" id="stationsIds" placeholder="e.g., 1, 5, 12" pattern="^\d+(\s*,\s*\d+)*$" required>
                     </div>
                     <div class="field">
                         <label for="telegramToken">Telegram Bot Token</label>
@@ -36,7 +36,7 @@
                         <label for="chatId">Telegram Chat ID</label>
                         <input type="text" id="chatId" placeholder="e.g., -1001234567890" required>
                     </div>
-                    <button type="button" onclick="subscribeClient()">Subscribe Client</button>
+                    <button type="submit">Subscribe Client</button>
                 </form>
             </section>
 
